--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -377,7 +377,7 @@
     "\n",
     "$\\left|{+b}\\right\\rangle = \\frac{1}{2}(I + \\vec{b}\\vec{\\sigma})$\n",
     "\n",
-    "where $\\vec{\\sigma}$ is a vector of Pauli matrices $\\sigma_{x}$, $\\sigma_{y}$, $\\sigma_{z}$ and vectors $\\vec{a}$ and $\\vec{b}$ are parameter vectors of quantum states. Probabilities of measurement outcomes for a certain quantum state $\\left|{+b}\right\\rangle$ and fidelities of the outcome states with respect to the target state are $P_{+} = |\\left\\langle{a}|{+b}\\right\\rangle|^{2} = F_{+}$ and $P_{-} = |\\left\\langle{a}|{-b}\\right\\rangle|^{2} = F_{-}$. Then we can calculate the average fidelity of quantum clones by integrating over the surface of the Bloch sphere (because we pick the state $\\left|{+b}\\right\\rangle$ randomly):\n",
+    "where $\\vec{\\sigma}$ is a vector of Pauli matrices $\\sigma_{x}$, $\\sigma_{y}$, $\\sigma_{z}$ and vectors $\\vec{a}$ and $\\vec{b}$ are parameter vectors of quantum states. Probabilities of measurement outcomes for a certain quantum state $\\left|{+b}\\right\\rangle$ and fidelities of the outcome states with respect to the target state are $P_{+} = |\\left\\langle{a}|{+b}\\right\\rangle|^{2} = F_{+}$ and $P_{-} = |\\left\\langle{a}|{-b}\\right\\rangle|^{2} = F_{-}$. Then we can calculate the average fidelity of quantum clones by integrating over the surface of the Bloch sphere (because we pick the state $\\left|{+b}\\right\\rangle$ randomly):\n",
     "\n",
     "$\\mathcal{F} = \\int_{S_{2}}d\\vec{b}(P_{+}F_{+} + P_{-}F_{-}) = \\frac{1}{2} + \\frac{1}{2}\\int_{S_{2}}d\\vec{b}(\\vec{a}*\\vec{b})^{2} = \\frac{2}{3} \\approx 0.667$\n",
     "\n",
