--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -466,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another trivial strategy for the quantum state cloning is a simple guess about the target state. Suppose we have a target state $\\left|{a}\\right\\rangle$. To do the cloning, we add one more arbitrary quantum state $\\left|{b}\\right\\rangle$ and call this couple of states clones. Let's calculate the fidelity of this cloning. If we choose a particular clone at random, we can equiprobably pick the unperturbed target state $\\left|{a}\\right\\rangle$ and obtain fidelity $F_{a} = 1$ or we can pick the arbitrary state $\\left|{b}\\right\\rangle$ wit fidelity $P_{b} = |\\left\\langle{a}|{+b}\\right\\rangle|^{2} = F_{b}$. The overall cloning fidelity will be\n",
+    "Another trivial strategy for the quantum state cloning is a simple guess about the target state. Suppose we have a target state $\\left|{a}\\right\\rangle$. To do the cloning, we add one more arbitrary quantum state $\\left|{b}\\right\\rangle$ and call this couple of states clones. Let's calculate the fidelity of this cloning. If we choose a particular clone at random, we can equiprobably pick the unperturbed target state $\\left|{a}\\right\\rangle$ and obtain fidelity $F_{a} = 1$ or we can pick the arbitrary state $\\left|{b}\\right\\rangle$ with fidelity $P_{b} = |\\left\\langle{a}|{b}\\right\\rangle|^{2} = F_{b}$. The overall cloning fidelity will be\n",
     "\n",
     "$\\mathcal{F} = \\frac{1}{2}F_{a} + \\frac{1}{2}\\int_{S_{2}}d\\vec{b}(\\frac{1 + (\\vec{a}*\\vec{b})}{2}) = \\frac{3}{4} = 0.75$\n",
     "\n",
