--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='top'></a>\n",
-    "\n",
-    "# **Going beyond the no-cloning theorem with IBM QX**\n",
+    "# **Going beyond the no-cloning theorem with IBM QX**\n"
     "\n",
     "### ***Abstract:***\n",
     "\n",
@@ -919,7 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Why is this interesting?**\n",
+    "## **Why is this interesting?**\n"
    ]
   },
   {
@@ -967,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***References***\n",
+    "## ***References***\n"
    ]
   },
   {
