--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Going beyond the no-cloning theorem with IBM QX**\n"
+    "# **Going beyond the no-cloning theorem with IBM QX**\n",
     "\n",
     "### ***Abstract:***\n",
     "\n",
