--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='top'></a>\n",
+    "\n",
     "# **Going beyond the no-cloning theorem with IBM QX**\n",
     "\n",
     "### ***Abstract:***\n",
@@ -544,7 +546,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='section3'></a>\n",
     "## **Clever ways of cloning: getting \"not so bad clones\"**\n",
+    "<a href='#top'>(to the top)</a>"
    ]
   },
   {
@@ -917,7 +921,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Why is this interesting?**\n"
+    "<a id='section4'></a>\n",
+    "## **Why is this interesting?**\n",
+    "<a href='#top'>(to the top)</a>"
    ]
   },
   {
@@ -965,7 +971,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***References***\n"
+    "<a id='section5'></a>\n",
+    "## ***References***\n",
+    "<a href='#top'>(to the top)</a>"
    ]
   },
   {
