--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='top'></a>\n",
-    "\n",
     "# **Going beyond the no-cloning theorem with IBM QX**\n",
     "\n",
     "### ***Abstract:***\n",
@@ -546,9 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section3'></a>\n",
-    "## **Clever ways of cloning: getting \"not so bad clones\"**\n",
-    "<a href='#top'>(to the top)</a>"
+    "## **Clever ways of cloning: getting \"not so bad clones\"**"
    ]
   },
   {
@@ -921,9 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section4'></a>\n",
-    "## **Why is this interesting?**\n",
-    "<a href='#top'>(to the top)</a>"
+    "## **Why is this interesting?**"
    ]
   },
   {
@@ -971,9 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section5'></a>\n",
-    "## ***References***\n",
-    "<a href='#top'>(to the top)</a>"
+    "## ***References***"
    ]
   },
   {
