--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -401,9 +401,8 @@
     "# random_state is another way to produce a random quantum state in qiskit!\n",
     "\n",
     "\"\"\"\n",
-    "Uncomment different initial states here to see the cloning results for \"random basis measurement\"\n",
-    "strategy. Also, notice that the average outcome is independent of the target state |a>, which means\n",
-    "it is a universal cloning (on average). We will discuss universality later.\n",
+    "Uncomment different initial states here to see the cloning results for \"random basis measurement strategy. Also, notice that the average outcome is independent of the target state \"\n",
+    "|a>, which means it is a universal cloning (on average). We will discuss universality later.\n",
     "\"\"\"\n",
     "a_state = np.array([1, 0])                                # |0> state\n",
     "#a_state = np.array([0, 1])                                # |1> state\n",
@@ -544,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Clever ways of cloning: getting \"not so bad clones\"**"
+    "## **Clever ways of cloning: getting a pair of pretty good clones**"
    ]
   },
   {
