--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -485,9 +485,8 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Uncomment different initial states here to see the cloning results for \"a trivial amplification\"\n",
-    "strategy. Also, notice that the average outcome is independent of the target state |a>, which means\n",
-    "it is a universal cloning (on average). We will discuss universality later.\n",
+    "Uncomment different initial states here to see the cloning results for \"a trivial amplification\" strategy. Also, notice that the average outcome is independent of the target state |a>,\n",
+    "which means it is a universal cloning (on average). We will discuss universality later.\\n",
     "\"\"\"\n",
     "a_state = np.array([1, 0])                                # |0> state\n",
     "#a_state = np.array([0, 1])                                # |1> state\n",
