--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## **Table of contents:**\n",
     "\n",
-    "### **The \"No cloning theorem\" in quantum mechanics**\n",
+    "### **The \"No-cloning theorem\" in quantum mechanics**\n",
     "\n",
     "### **Trivial ways of cloning: gaining intuition**\n",
     "\n",
