--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -281,13 +281,13 @@
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00) = \\left\\langle 00|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(00) = |\\left\\langle 00|\\Psi_{final}\\right\\rangle|^{2} = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(01) = \\left\\langle 01|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(01) = |\\left\\langle 01|\\Psi_{final}\\right\\rangle|^{2} = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(10) = \\left\\langle 10|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(10) = |\\left\\langle 10|\\Psi_{final}\\right\\rangle|^{2} = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(11) = \\left\\langle 11|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(11) = |\\left\\langle 11|\\Psi_{final}\\right\\rangle|^{2} = \\frac{1}{4}$\n",
     "\n",
     "Looking back at the resulting histogram, we see quite different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
     "\n",
