--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -583,7 +583,7 @@
     "\n",
     "It is clear that the fidelity between the initial state and the resulting clone state is \n",
     "\n",
-    "$\\mathcal{F} = \\bra{\\psi}\\rho\\ket{\\psi} = \\frac{5}{6} \\approx 0.833$\n",
+    "$\\mathcal{F} = \\left\langle{\\psi}\\right|\\rho\\left|{\\psi}\right\rangle = \\frac{5}{6} \\approx 0.833$\n",
     "\n",
     "Now let us stress out the meaning of the word \"**optimal**\": the quantum cloning machine is called **optimal**, if for the chosen **figure of merit** it provides the best quality clone of the target state. As for the result of Buzek and Hillery, their UQC machine provides the best possible clone for quantum fidelity.\n",
     "\n",
