--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -583,11 +583,11 @@
     "\n",
     "It is clear that the fidelity between the initial state and the resulting clone state is \n",
     "\n",
-    "$\\mathcal{F} = \\left\langle{\\psi}\\right|\\rho\\left|{\\psi}\right\rangle = \\frac{5}{6} \\approx 0.833$\n",
+    "$\\mathcal{F} = \\left\\langle{\\psi}\\right|\\rho\\left|{\\psi}\\right\\rangle = \\frac{5}{6} \\approx 0.833$\n",
     "\n",
     "Now let us stress out the meaning of the word \"**optimal**\": the quantum cloning machine is called **optimal**, if for the chosen **figure of merit** it provides the best quality clone of the target state. As for the result of Buzek and Hillery, their UQC machine provides the best possible clone for quantum fidelity.\n",
     "\n",
-    "Now let us implement such a quantum cloning machine using quantum circuits language. Fortunately, the quantum circuit, which allows us to do such the task, was discovered in the work of <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.56.3446\">Buzek et.al (1997)</a>. This circuit is the following:"
+    "Now let us implement such a quantum cloning machine using quantum circuits language. Fortunately, the quantum circuit, which allows us to do the task, was discovered in the work of <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.56.3446\">Buzek et.al (1997)</a>. This circuit is the following:"
    ]
   },
   {
