--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -625,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see two parts: the first part is an ancillary state preparation, which serves as *a program* for the future action of the cloner part, and the second part is the cloning action, which distributes information between the target state and the ancillary qubits. Now lets see the outcome of the circuit with proper rotation parameters from <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.56.3446\">Buzek et.al (1997)</a> for different target states."
+    "Here we see two parts: the first part is an ancillary state preparation, which serves as *a program* for the future action of the cloner part, and the second part is the cloning action, which distributes information between the target state and the ancillary qubits. Now lets see the outcome of the circuit with proper rotation parameters from <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.56.3446\">Buzek et al. (1997)</a> for different target states."
    ]
   },
   {
@@ -643,7 +643,7 @@
     "def ancilla_state_prep(circuit, theta1, theta2, theta3):\n",
     "    \"\"\"\n",
     "    A function, which prepares the state of the ancillary qubits\n",
-    "    of the quantum circuit from the paper by Buzek et.al (1997).\n",
+    "    of the quantum circuit from the paper by Buzek et al. (1997).\n",
     "    \n",
     "    Input: \n",
     "        circuit - an object representing the quantum circuit.\n",
@@ -662,7 +662,7 @@
     "def cloner(circuit):\n",
     "    \"\"\"\n",
     "    A function, which does the cloning part in the \n",
-    "    quantum circuit from the paper by Buzek et.al (1997).\n",
+    "    quantum circuit from the paper by Buzek et al. (1997).\n",
     "    \n",
     "    Input: \n",
     "        circuit - an object representing the quantum circuit.\n",
@@ -679,7 +679,7 @@
     "def cloner_circuit(circuit, theta1, theta2, theta3):\n",
     "    \"\"\"\n",
     "    A function, which implements the full cloning circuit\n",
-    "    from the paper by Buzek et.al (1997).\n",
+    "    from the paper by Buzek et al. (1997).\n",
     "    \n",
     "    Input: \n",
     "        circuit - an object representing the quantum circuit.\n",
