--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -813,7 +813,7 @@
     "\n",
     "For the optimal symmetric cloning one requires $F_{A}$ = $F_{B}$, immediately obtaining $\\eta = \\pi/4$ and $F_{A}$ = $F_{B}$ = $\\frac{1}{2}(1 + \\frac{1}{\\sqrt{2}}) \\approx 0.8535$\n",
     "\n",
-    "Let's implement this quantum cloning machine using qiskit. It was demonstrated in a work by <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.65.012304\">Fan et al.(2001)</a> that the quantum circuit from above is capable of implementing phase-covariant quantum cloning in both XY and XZ planes of the Bloch sphere using different rotation parameters."
+    "Let's implement this quantum cloning machine using quantum circuits language. It was demonstrated in a work by <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.65.012304\">Fan et al.(2001)</a> that the quantum circuit from above is capable of implementing phase-covariant quantum cloning in both XY and XZ planes of the Bloch sphere using different rotation parameters."
    ]
   },
   {
@@ -829,7 +829,7 @@
     "    \n",
     "    Input: \n",
     "        initial state - a target state so be cloned.\n",
-    "        plane - a choise of the particular plane of\n",
+    "        plane - a choice of the particular plane of\n",
     "                the Bloch sphere ('xz' or 'xy')\n",
     "    Output:\n",
     "        A couple of density matrices rho_clone1 and rho_clone2\n",
