--- a/Teach_me_qiskit_project.ipynb
+++ b/Teach_me_qiskit_project.ipynb
@@ -697,7 +697,7 @@
     "    from the paper by Buzek and Hillery (1996).\n",
     "    \n",
     "    Input: \n",
-    "        initial state - a target state so be cloned.\n",
+    "        initial state - a target state to be cloned.\n",
     "    Output:\n",
     "        A couple of density matrices rho_clone1 and rho_clone2\n",
     "        of the clones of the target state.\n",
@@ -828,7 +828,7 @@
     "    from the paper by Bruss et al. (2000).\n",
     "    \n",
     "    Input: \n",
-    "        initial state - a target state so be cloned.\n",
+    "        initial state - a target state to be cloned.\n",
     "        plane - a choice of the particular plane of\n",
     "                the Bloch sphere ('xz' or 'xy')\n",
     "    Output:\n",
